Modifico index, foto explicativa, etiquetas

--- a/PRACTICA/VSC CURSO HTML/index.html
+++ b/PRACTICA/VSC CURSO HTML/index.html
@@ -1,1 +1,17 @@
-Buenas tardes, espero que todo vaya de fucking madre.
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Learning HTML Spanish</title>
+    </head>
+<body>
+    <h1> 
+        Mi primera Web.
+    </h1>
+    <h2>
+        Buenas tardes
+    </h2>
+    <p>
+        Buenas tardes, esta es mi primera vez escribiendo un párrafo para una página web creada por mi mismo en el lenguaje html.
+    </p>
+</body>
+</html>
