Imagenes,enlaces,listas,rutas,formularios...

--- a/PRACTICA/VSC CURSO HTML/enlaces/enlaces.html
+++ b/PRACTICA/VSC CURSO HTML/enlaces/enlaces.html
@@ -14,11 +14,14 @@
         </p>
         <ul>
             <li>
-                <a href="enlaces2.html">Segundo enlace.</a>
+                <a href="enlaces2.html" title="Subtitulo de la pagina.">Segundo enlace.</a>
             </li>
             <li>
                 <a href="enlaces3.html">Tercer enlace.</a>
             </li>
         </ul>
+                <h2>ENLACE CON TARGET BLANK</h2>
+                <p>Esto es para que se abra en otra pagina.</p>
+                <a href="enlaces2.html" target="_blank">Segundo enlace(Enlace que se abrirá en otra pestaña)</a>
     </body>
 </html>
