Finalizo segundo dia

--- a/PRACTICA/VSC CURSO HTML/formularios.html
+++ b/PRACTICA/VSC CURSO HTML/formularios.html
@@ -8,8 +8,15 @@
     <h1>Formularios</h1>
     <body>
         <form action="">
-            <input type="text">
-            <input type="email">
+            <input type="text" requiered minlength="3" name="username" placeholder="Nombre de usuario.">
+            <input type="email"required>
+            <input type="password">
+            <input type="checkbox">
+            <input type="radio">
+            <input type="radio">
+            <input type="file">
+            <input type="submit">
+            <input type="date">
         </form>
     </body>
 </html>
