Mas cosas de css, BoxModel, bordes, margenes, contenido, padding...

--- a/CSS/PRÁCTICA/WIDTH Y HEIGHT/index.html
+++ b/CSS/PRÁCTICA/WIDTH Y HEIGHT/index.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div></div>
+        <form >
+        <input type="email" placeholder="email">
+        <input type="password" placeholder="Contraseña">
+        <input type="submit" value="Iniciar sesion">
+        </form>
     </body>
 </html>
