--- a/CSS/PRÁCTICA/FONDOS/index.html
+++ b/CSS/PRÁCTICA/FONDOS/index.html
@@ -5,7 +5,15 @@
     </head>
     <body>
         <link rel="stylesheet" href="styles.css">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quod numquam? Alias autem beatae obcaecati sunt, odit minus suscipit recusandae cumque quia labore consectetur molestias reiciendis eligendi odio. Modi, laboriosam!
-        <div class="box"></div>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quod numquam? Alias autem beatae obcaecati sunt, odit minus suscipit recusandae cumque quia labore consectetur molestias reiciendis eligendi odio. Modi, laboriosam!
+           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quod numquam? Alias autem beatae obcaecati sunt, odit minus suscipit recusandae cumque quia labore consectetur molestias reiciendis eligendi odio. Modi, laboriosam!
+        <div class="box">
+            <div class="opaco">
+                <h2>hola</h2>
+            </div>
+        </div>
+        
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quod numquam? Alias autem beatae obcaecati sunt, odit minus suscipit recusandae cumque quia labore consectetur molestias reiciendis eligendi odio. Modi, laboriosam!
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quod numquam? Alias autem beatae obcaecati sunt, odit minus suscipit recusandae cumque quia labore consectetur molestias reiciendis eligendi odio. Modi, laboriosam!
     </body>
 </html>
