ENLACES, TABLAS Y VIDEOS+AUDIO EN HTML

--- a/HTML/PRACTICA/DETAILS, SUMMARY/index.html
+++ b/HTML/PRACTICA/DETAILS, SUMMARY/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Details, Summarry, summary, html, HTML">
     <meta name="robots" content="nosnippet">
     <meta name="title" content="Fieldset">
-     <!--A PARTIR DE AQUI SON LAS OPEN GRAP METATAGS PARA REDES SOCIALES-->
+     <!--A PARTIR DE AQUI    SON LAS OPEN GRAP METATAGS PARA REDES SOCIALES-->
     <title>Details & Summarry</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/HTML/PRACTICA/METATAGS, COMENTARIOS,ICONOS/ICONOS/icono/FaviconRM.png">
@@ -28,6 +28,14 @@
                 Ganas de estudiar
             </li>
         </ul>
+    </details>
+    <details>
+        <summary>
+            ¿Debo ser mayor de edad?
+        </summary>
+        <p>
+            Si, debes ser mayor de edad o de lo contrario, estar acompaañado de un adulto.
+        </p>
     </details>
 </body>
 </html>
