Especifidad y cascada + como poner un titulo con letras de distinto color

--- a/CSS/PRÁCTICA/INTERMEDIO/(BONUS) EJ ADA/index.html
+++ b/CSS/PRÁCTICA/INTERMEDIO/(BONUS) EJ ADA/index.html
@@ -8,13 +8,30 @@
     <meta name="author" content="Sergio Sánchez Carrasco">
     <meta name="robots" content="nosnippet">
     <meta name="title" content="CASCADA Y ESPECIFIDAD">
-    <title>CASCADA Y ESPECIFIDAD</title>
+    <title> EJEMPLO DE ADA</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/HTML/PRACTICA/NIVEL INTERMEDIO/METATAGS, COMENTARIOS,ICONOS/ICONOS/icono/FaviconRM.png">
 </head>
 <body>
-    <h1 class="titulo" id="titulo">
-        TITULO PRINCIPAL
+    <h1 >
+        <span class="l-1">
+            T
+        </span>
+        <span class="l-2">
+            I
+        </span>
+        <span class="l-3">
+            T
+        </span>
+        <span class="l-4">
+            U
+        </span>
+        <span class="l-5">
+            L
+        </span>
+        <span class="l-6">
+            O
+        </span>
     </h1>
 </body>
 </html>
