Pseudoclases, Has Is Where, PseudoElementos y Metodologia BEM

--- a/CSS/PRÁCTICA/INTERMEDIO/PSEUDOCLASES/index.html
+++ b/CSS/PRÁCTICA/INTERMEDIO/PSEUDOCLASES/index.html
@@ -23,5 +23,15 @@
         <li>Elemento 3</li>
         <li class="elem-4">Elemento 4</li>
     </ul>
+    <div>
+        <!--Si dejaramos el div vacio entonces se pondra verde el cuadrado por la pseudoclase :empty en css-->
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio voluptate quasi nobis sequi qui nam maxime error similique voluptatem est, perspiciatis debitis dolores quis sunt sapiente tenetur in labore culpa?
+        </p>
+    </div>
+    <input type="checkbox">
+    <a href="https://youtube.com/@daltoemprende" target="_blank">DALTO EMPRENDE</a>
+    <a href="https://youtube.com/soydalto" target="_blank">SOY DALTO</a>
+    <input type="email">
 </body>
 </html>
