POSICIONES RELATIVA, ABSOLUTA, FIXED/FIJA, STICKY +EJERCICIO VENTANA

--- a/CSS/PRÁCTICA/INTERMEDIO/POSICION RELATIVA/index.html
+++ b/CSS/PRÁCTICA/INTERMEDIO/POSICION RELATIVA/index.html
@@ -13,6 +13,14 @@
     <link rel="icon" href="/SELECTORES AVANZADOS/FaviconRM.png">
 </head>
 <body>
-    
+    <div class="box">
+        CAJA 1  
+    </div>
+    <div class="box box--blue">
+        CAJA 2   
+    </div>
+    <div class="box">
+        CAJA 3  
+    </div>
 </body>
 </html>
