Overflow, Flujos de Texto, Object-fit y Object-Pos, outline/contorno, transiciones

--- a/CSS/PRÁCTICA/INTERMEDIO/TRANSICIONES/index.html
+++ b/CSS/PRÁCTICA/INTERMEDIO/TRANSICIONES/index.html
@@ -13,6 +13,8 @@
     <link rel="icon" href="/SELECTORES AVANZADOS/FaviconRM.png">
 </head>
 <body>
-    
+    <div class="box">
+        
+    </div>
 </body>
 </html>
