--- a/CSS/PRÁCTICA/FLEXBOX/ALIGN SELF/index.html
+++ b/CSS/PRÁCTICA/FLEXBOX/ALIGN SELF/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" contentP="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ORDER en CSS">
-    <meta name="keywords" content="ORDER, css">
+    <meta name="description" content="ALIGN SELF en CSS">
+    <meta name="keywords" content="ALIGN SELF, css">
     <meta name="robots" content="nosnippet">
     <meta name="author" content="Sergio Sánchez Carrasco">
-    <meta name="title" content="ORDER">
-    <title>ORDER</title>
+    <meta name="title" content="ALIGN SELF">
+    <title>ALIGN SELF</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="/SELECTORES AVANZADOS/FaviconRM.png">
 </head>
@@ -19,6 +19,15 @@
         <div class="flexbox__flex-item">1</div>
         <div class="flexbox__flex-item">2</div>
         <div class="flexbox__flex-item">3</div>
+        <div class="flexbox__flex-item">4</div>
+        <div class="flexbox__flex-item">5</div>
+        <div class="flexbox__flex-item">6</div>
+        <div class="flexbox__flex-item">7</div>
+        <div class="flexbox__flex-item">8</div>
+        <div class="flexbox__flex-item">9</div>
+        <div class="flexbox__flex-item">10</div>
+        <div class="flexbox__flex-item">11</div>
+        <div class="flexbox__flex-item">12</div>
     </div>
 </body>
 </html>
