--- a/CSS/PRÁCTICA/FLEXBOX/ALIGN SELF/index.html
+++ b/CSS/PRÁCTICA/FLEXBOX/ALIGN SELF/index.html
@@ -20,7 +20,7 @@
         <div class="flexbox__flex-item">2</div>
         <div class="flexbox__flex-item">3</div>
         <div class="flexbox__flex-item">4</div>
-        <div class="flexbox__flex-item">5</div>
+        <div class="flexbox__flex-item item-5">5</div>
         <div class="flexbox__flex-item">6</div>
         <div class="flexbox__flex-item">7</div>
         <div class="flexbox__flex-item">8</div>
