--- a/CSS/PRÁCTICA/RESPONSIVE DESIGN/ETIQUETAS PICTURE, SOURCE Y MEDIA HTML/index.html
+++ b/CSS/PRÁCTICA/RESPONSIVE DESIGN/ETIQUETAS PICTURE, SOURCE Y MEDIA HTML/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <picture>
+        <source type="image/webp" srcset="dalto.webp">
+        <source media="(max-width:600px)" srcset="dalto-medium.png">
+        <source media="(max-width: 360)" srcset="dalto-small.png">
+        <img src="dalto.png" alt="Imagen del Dalto">
+    </picture>
 </body>
 </html>
