--- a/WEBS/PRIMERA WEB/index.html
+++ b/WEBS/PRIMERA WEB/index.html
@@ -48,42 +48,73 @@
                             Sergio & Ada son una pareja a la que le encanta viajar y disfrutar de la naturaleza, la cultura de otros países, de los monumentos... 
                         </p>
                     </div>
-                    <div class="profile__skills-container">
+                    <!--SKILLS DE SERGIO-->
+                    <div class="profile__skills-container skills-container--sergio">
                         <h2>SKILLS SERGIO</h2>
                         <ul>
-                            <li class="profile__skill">
-                                <div class="load-bar">
-                                    <div class="load-bar__bar bar--80">
+                            <li class="profile__skill skill--sergio">
+                                <div class="load-bar load-bar--sergio">
+                                    <div class="load-bar__bar bar--sergio bar--80">
                                         80%
                                     </div>
                                 </div>
-                                <span class="profile__skill-name">HTML</span>
+                                <span class="profile__skill-name skill-name--sergio">HTML</span>
                             </li>
-                            <li class="profile__skill">
-                                <div class="load-bar">
-                                    <div class="load-bar__bar bar--80">
+                            <li class="profile__skill skill--sergio">
+                                <div class="load-bar load-bar--sergio">
+                                    <div class="load-bar__bar bar--sergio bar--60">
                                         60%
                                     </div>
                                 </div>
-                                <span class="profile__skill-name">CSS</span>
+                                <span class="profile__skill-name skill-name--sergio">CSS</span>
                             </li>
-                            <li class="profile__skill">
-                                <div class="load-bar">
-                                    <div class="load-bar__bar bar--80">
+                            <li class="profile__skill skill--sergio">
+                                <div class="load-bar load-bar--sergio">
+                                    <div class="load-bar__bar bar--sergio bar--90">
                                         90%
                                     </div>
                                 </div>
-                                <span class="profile__skill-name">JAVA</span>
+                                <span class="profile__skill-name skill-name--sergio">JAVA</span>
                             </li>
                         </ul>
-                        <li class="profile__skill">
-                            <div class="load-bar">
-                                <div class="load-bar__bar bar--80">
+                        <li class="profile__skill skill--sergio">
+                            <div class="load-bar load-bar--sergio">
+                                <div class="load-bar__bar bar--sergio bar--100">
                                     100%
                                 </div>
                             </div>
-                            <span class="profile__skill-name">C++</span>
+                            <span class="profile__skill-name skill-name--sergio">C++</span>
                         </li>
+                    </div>
+                    <!--SKILLS DE ADA-->
+                    <div class="profile__skills-container skills-container--ada">
+                        <h2>SKILLS ADA</h2>
+                        <ul>
+                            <li class="profile__skill skill--ada">
+                                <div class="load-bar load-bar--ada">
+                                    <div class="load-bar__bar bar--ada bar--100">
+                                        100%
+                                    </div>
+                                </div>
+                                <span class="profile__skill-name skill-name--ada">ENFERMERA</span>
+                            </li>
+                            <li class="profile__skill skill--ada">
+                                <div class="load-bar load-bar--ada">
+                                    <div class="load-bar__bar bar--ada bar--80">
+                                        80%
+                                    </div>
+                                </div>
+                                <span class="profile__skill-name skill-name--ada">M. EMERGENCIAS</span>
+                            </li>
+                            <li class="profile__skill skill--ada">
+                                <div class="load-bar load-bar--ada">
+                                    <div class="load-bar__bar bar--ada bar--10">
+                                        10%
+                                    </div>
+                                </div>
+                                <span class="profile__skill-name skill-name--ada">FOTOGRAFA</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
