--- a/CSS/PRÁCTICA/ANIMACIONES/EFECTO TYPEWRITER/index.html
+++ b/CSS/PRÁCTICA/ANIMACIONES/EFECTO TYPEWRITER/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="text-container">
+            <p class="text">TEXTO...</p>
+    </div>
 </body>
 </html>
