Variables en CSS, funcion Calc(), propiedades de Scroll

--- a/SECCION AVANZADA/PRACTICA/VARIABLES/index.html
+++ b/SECCION AVANZADA/PRACTICA/VARIABLES/index.html
@@ -9,8 +9,19 @@
     <meta name="author" content="Sergio Sánchez Carrasco">
     <meta name="title" content="VARIABLES">
     <title>VARIABLES</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="box">
+        <h1>TITULO</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur odio eos ducimus excepturi rem illo maxime! Incidunt autem labore harum sed quidem, recusandae mollitia consequatur et exercitationem cumque maiores error?</p>
+    </div>
+    <div class="box">
+        <h1>TITULO</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur odio eos ducimus excepturi rem illo maxime! Incidunt autem labore harum sed quidem, recusandae mollitia consequatur et exercitationem cumque maiores error?</p>
+    </div>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptate nisi dignissimos quaerat ratione! Ipsum, dolor necessitatibus molestiae magni perspiciatis impedit. Non quos a reprehenderit sapiente facilis facere quasi corrupti?
+    </p>
 </body>
 </html>
