Toda la practica finiquitada

--- a/SECCION AVANZADA/PRACTICA/INITIAL LETTER/index.html
+++ b/SECCION AVANZADA/PRACTICA/INITIAL LETTER/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="box">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ad aut! Veniam molestiae quia dolores fugiat quo quod laborum, minus fuga eaque consequuntur? Eius laborum eligendi architecto corporis. Provident, sit.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ad aut! Veniam molestiae quia dolores fugiat quo quod laborum, minus fuga eaque consequuntur? Eius laborum eligendi architecto corporis. Provident, sit.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ad aut! Veniam molestiae quia dolores fugiat quo quod laborum, minus fuga eaque consequuntur? Eius laborum eligendi architecto corporis. Provident, sit.
+        </p>
+    </div>
 </body>
 </html>
